unpackaged/main/default/objects/Welcome_Email_Variables__c/Welcome_Email_Variables__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Welcome Email Variables</label>
</CustomObject>