unpackaged/main/default/objects/Welcome_Email_Variables__c/fields/Amount_Funded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Funded__c</fullName>
    <description>Amount Funded in billions</description>
    <inlineHelpText>Amount Funded in billions</inlineHelpText>
    <label>Amount Funded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>