unpackaged/main/default/objects/Welcome_Email_Variables__c/fields/House_Account_Fax__c.field-meta.xml
<CustomField>
    <fullName>House_Account_Fax__c</fullName>
    <label>House Account Fax</label>
    <type>Phone</type>
</CustomField>