unpackaged/main/default/objects/Welcome_Email_Variables__c/fields/House_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>House_Account_Name__c</fullName>
    <label>House Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>